# mos

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  debug.sh  gdb.sh  gdbinit  linker.ld  main.c  qemu.dtb  qemu.dts
cmake/: clang-aarch64.cmake  gcc-aarch64.cmake  libfdt.cmake
include/: driver.h  pl011.h  string.h
include/mos/: arch.h  driver.h  log.h  memory.h  paging.h  utils.h
include/mos/drivers/: gic_common.h  gicv3.h
libs/: CMakeLists.txt
src/: CMakeLists.txt  boot.S  driver.c  entry.S  irq.c  log.c  main.c  memory.c
src/drivers/irq/arm/gicv3/: gicv3.c
src/drivers/tty/serial/arm/pl011/: pl011.c
